test/expected/explain_f_k-knr.out
explain struct S f()
        ^
9: error: function returning struct or union is not supported until C89
